--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,2 +1,13 @@
-<h1>About#index</h1>
+<h1><%= @page_title %></h1>
 <p>Find me in app/views/about/index.html.erb</p>
+
+<div class="well">
+	<h3>Location</h3>
+	<ul>
+		<li>The Bookstore</li>
+		<li>499 Massachussets Ave, Unit 2</li>
+		<li>Boston, MA 02110</li>
+		<li>Phone: (617) 555-5555</li>
+		<li>Email: support@thebookstore.com</li>
+	</ul>
+</div>
