--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bookstore</title>
+  <title><%= @page_title ? @page_title : 'Welcome' %> | The BookStore</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,8 +22,8 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><%= link_to 'Home', root_path %></li>
-          <li><%= link_to 'About', about_path %></li>
+          <li class="<%= params[:controller] == 'books' ? 'active' : '' %>"><%= link_to 'Home', root_path %></li>
+          <li class="<%= params[:controller] == 'about' ? 'active' : '' %>"><%= link_to 'About', about_path %></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
@@ -39,6 +39,12 @@
       </div><!--/.nav-collapse -->
     </div>
   </nav>
+
+  <header>
+    <div class="container">
+      <h1>The BookStore <small><%= @page_title ? @page_title : 'Welcome' %></small></h1>
+    </div>
+  </header>
 
   <%= yield %>
 
