--- a/app/views/partials/_sidebar.html.erb
+++ b/app/views/partials/_sidebar.html.erb
@@ -10,3 +10,13 @@
   </ul>
 </div>
 <% end %>
+
+<%if params[:controller] == 'books' && params[:action] == 'index' || params[:action] == 'show' %>
+<div>
+  <ul class="list-group">
+    <a href="#" class="list-group-item">Ruby On Rails</a>
+    <a href="#" class="list-group-item">PHP</a>
+    <a href="#" class="list-group-item">HTML & CSS</a>
+  </ul>
+</div>
+<% end %>
